fix: se elimina propiedad css outline que permite visibilidad de cajas

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
 /*INICIO CSS RAMA CHRIS*/
-*{
-  outline: 1px solid red;
-}
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
